# imgpact.com

./: .gitignore  Cargo.toml  Dockerfile  LICENCE  README.md  build.sh  deploy.ps1  docker-compose.yml  fix_templates.ps1  imgpact.service  package-lock.json  package.json  restart-server.sh  stats.db
.cargo/: config.toml
.claude/: settings.local.json
nginx/: nginx.conf
server/: Cargo.toml
server/src/: i18n.rs  main.rs  stats.rs
server/tests/: routes.rs
static/css/: consent.css  style-critical.txt  style-extra.css  style.css
static/js/: app.js  consent.js  ffmpeg-bridge.js  stats.js  tool-common.js  wasm-bridge.js
static/js/tools/: add-text.js  convert.js  converters.js  crop.js  effects.js  gif-analyzer.js  gif-editor.js  gif-maker.js  gif-split.js  gif-to-mov.js  gif-to-mp4.js  gif-to-webm.js  optimize.js  resize.js  transform.js  video-to-gif.js
templates/: base.html  index.html  stats.html
templates/guides/: index.html
templates/guides/en/: amazon-product-images.html  cdn-images-comparatif.html  (+23 more)
templates/pages/: about.html  cookies.html  help.html  privacy.html  terms.html
templates/tools/: add-text.html  convert.html  converter.html  crop.html  effects.html  gif-analyzer.html  gif-editor.html  gif-maker.html  gif-split.html  gif-to-mov.html  gif-to-mp4.html  gif-to-webm.html  optimize.html  placeholder.html  resize.html  transform.html  video-to-gif.html
tests/unit/: pure-utils.test.js  tool-common.test.js
wasm-engine/: Cargo.toml
wasm-engine/src/: convert.rs  crop.rs  effects.rs  gif_engine.rs  lib.rs  optimize.rs  resize.rs  text.rs  transform.rs
(+146 files in other folders)
