[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tera = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-full", "set-header"] }
mime = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
