[package]
name = "wasm-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
image = { version = "0.25", default-features = false, features = [
  "png", "jpeg", "gif", "webp", "bmp", "ico", "tiff", "avif"
] }
gif = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# [profile.release] lives in the workspace root Cargo.toml — profiles in member crates are ignored.
